feat: add svn docs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
         "gvfs",
         "netdev",
         "noauto",
+        "propset",
         "regedit",
+        "svnignore",
         "usermod",
         "webdav"
     ]
