feat: add detailed tutorial for svn

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "Collab",
         "davfs",
         "davs",
         "gvfs",
@@ -7,6 +8,7 @@
         "noauto",
         "propset",
         "regedit",
+        "Slik",
         "svnignore",
         "usermod",
         "webdav"
