feat: add empty depth desc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
         "davs",
         "gvfs",
         "netdev",
+        "newname",
         "noauto",
+        "oldname",
         "propset",
         "regedit",
         "Slik",
