feat: add gh edu instructions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "CSDN",
         "davfs",
         "davs",
+        "eduroam",
         "gvfs",
         "netdev",
         "newname",
@@ -13,6 +14,7 @@
         "regedit",
         "Slik",
         "svnignore",
+        "UNNC",
         "usermod",
         "webdav"
     ]
